@@ -487,16 +487,21 @@ Window types are in +WINDOW-TYPES+.")
 
 (defun resize-window (window orig-x orig-y &optional additional-fn additional-arg)
   (raise-window window)
-  (let ((done nil)
-	(dx (- (xlib:drawable-x window) orig-x))
-	(dy (- (xlib:drawable-y window) orig-y))
-	(lx orig-x)
-	(ly orig-y)
-	(pointer-grabbed-p (xgrab-pointer-p)))
+  (let* ((done nil)
+	 (dx (- (xlib:drawable-x window) orig-x))
+	 (dy (- (xlib:drawable-y window) orig-y))
+	 (lx orig-x)
+	 (ly orig-y)
+	 (pointer-grabbed-p (xgrab-pointer-p))
+	 (hints (xlib:wm-normal-hints window))
+	 (min-width (or (and hints (xlib:wm-size-hints-min-width hints)) 0))
+	 (min-height (or (and hints (xlib:wm-size-hints-min-height hints)) 0))
+	 (max-width (or (and hints (xlib:wm-size-hints-max-width hints)) most-positive-fixnum))
+	 (max-height (or (and hints (xlib:wm-size-hints-max-height hints)) most-positive-fixnum)))
     (labels ((motion-notify (&rest event-slots &key root-x root-y &allow-other-keys)
 	       (declare (ignore event-slots))
-	       (setf (xlib:drawable-width window) (max (+ (xlib:drawable-width window) (- root-x lx)) 10)
-		     (xlib:drawable-height window) (max (+ (xlib:drawable-height window) (- root-y ly)) 10)
+	       (setf (xlib:drawable-width window) (min (max (+ (xlib:drawable-width window) (- root-x lx)) 10 min-width) max-width)
+		     (xlib:drawable-height window) (min (max (+ (xlib:drawable-height window) (- root-y ly)) 10 min-height) max-height)
 		     dx (- dx (- root-x lx))
 		     dy (- dy (- root-y ly))
 		     lx root-x ly root-y)
